# Infinite_Money

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG_v6.md  Dockerfile  MANIFEST.md  Makefile  PRD.md  README.md  README_BOOTSTRAP.md  STATUS.md  TODO.md  acu_qpu_ledger.json  autonomous-hedge-fund-implementation.patch  bootstrap.sh  docker-compose.yaml  docker-compose.yml  g2max_x_lab.py  install.sh  investment analysis  pyproject.toml  qconfig.yaml  requirements.txt  runner.py  sprint_alpha.yml
.data/: cache.duckdb  test_cache.duckdb
.github/workflows/: ci.yml  ci_install.yml  nightly.yml
alpha/: __init__.py
alpha/ts/: diffusion.py  patchtst.py
alpha_hive/: config.py  envs.py  executor.py  features.py  ingestor.py  quantum_opt.py  risk.py  rl_forge.py  schedule.py  selector.py  utils.py
alphaquanta/: README.md  pyproject.toml  qconfig.yaml  runner.py
alphaquanta/alphaquanta/: __init__.py  models.py
alphaquanta/alphaquanta/agents/: __init__.py  lean_core_agent.py
alphaquanta/alphaquanta/guardrails/: __init__.py  risk_guardrails.py
alphaquanta/alphaquanta/meta/: __init__.py  bayesian_optimizer.py
alphaquanta/alphaquanta/quantum/: __init__.py  diffusion_forecaster.py  qaoa_optimizer.py  quantum_var.py
alphaquanta/alphaquanta/regime/: __init__.py  hmm_detector.py
alphaquanta/alphaquanta/rl/: __init__.py  ppo_executor.py
alphaquanta/alphaquanta/telemetry/: __init__.py  acu_tracker.py  pnl_monitor.py  qpu_tracker.py
alphaquanta/alphaquanta/tools/: __init__.py  action_tools.py  data_tools.py
artifacts/: README.md
ci/: governance.py
conf/: backtest.yaml  contracts.yaml  ingest.yaml  news_ingest.yaml
configs/: README.md  config.yaml
configs/lean/: README.md  ai_signal_overlay_params.yaml  ai_signal_params.yaml  constraints.yaml  covered_call_params.yaml
constraints/: compiler.py  policy.yml
context/chats/: README.md
context/pdfs/: README.md
control_plane/: README.md  quantconnect_cli.py
control_plane/connectors/: quantconnect.py
dashboards/grafana/: alpha-hive-core.json
data/: prices.csv  readme.md  universe.csv
docker/hmm-core/: app.py  requirements.txt
docker/hmm-exporter/: Dockerfile  exporter.py
docs/: AGENT_AUTOMATION.md  AI_STACK.md  AWS_PIPELINE.md  AWS_QUICKSTART.md  BOOKS_COMPOUNDING.md  BOOKS_EDGE.md  CLEANUP_CANDIDATES.md  CONCEPTS_SYNTHESIS.md  CONFLICT_EVENT_STRATEGY.md  DATA_PIPELINE.md  DEPENDENCY_GRAPH.md  EARNINGS_VOL_STRATEGY.md  G2MAX_RULE.md  IBKR_PAPER_EXECUTION.md  INDEX.md  LOCAL_SETUP.md  OPTIMIZATION.md  QUANTUM_FINANCE.md  REPO_MAP.md  RESEARCH_PAPERS_ADVANCED.md  SR_BARRIER_RULE.md  STRATEGY_PLAIN_ENGLISH.md  STRUCTURE.md  TRACEABILITY.md  UPLIFT_REPORT.md  alpha_fabric_sources.md  architecture.md  contracts.md  mcp_servers.md  news_pipeline.md  operating_doctrine.md  runbook.md
docs/adr/: 0001-lean-source-of-truth.md  0002-knowledge-index.md  0003-imctl-command-center.md  README.md
docs/assets/: README.md
engine/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  lean.json  requirements.txt
engine/src/: InfiniteMoneyEngine.py
engine/tests/: test_cointegration.py  test_kelly.py  test_optimizer.py
eval/: gates.md  metrics.py
gates/: README.md  __init__.py  promotion_packet.py
hedge_fund/: README.md  __init__.py
hedge_fund/ai/: __init__.py  aws_cli.py  cli.py  config.py  labels.py  pipeline.py  signals.py  validation.py
hedge_fund/alpha/: __init__.py  edge.py
hedge_fund/backtest/: earnings_volatility.py  events.py  runner.py
hedge_fund/conf/: agent_loop.yaml  ai_stack.yaml  ai_stack_csv_sr_barrier.yaml  ai_stack_csv_sr_barrier_demo.yaml  aws_pipeline.yaml  backtest.yaml  earnings_volatility.yaml
hedge_fund/data/: loader.py
hedge_fund/exec/: base.py  ibkr.py  ibkr_signal_executor.py  ibkr_smoke_test.py  lean.py  simulated.py
hedge_fund/utils/: contracts.py  contracts_cli.py  logging.py  settings.py
infinite-money-engine/: Makefile  README.md  docker-compose.yml  lean.json  requirements.txt
infinite-money-engine/tests/: test_cointegration.py  test_kelly.py  test_optimizer.py
infinite_money/: __init__.py  main.py
infinite_money/agents/: __init__.py  alpha_researcher.py  base_agent.py  chief_architect.py  (+5 more)
infra/: README.md
knowledge/: README.md  citations_policy.md
lean_projects/: README.md
mcp_servers/: README.md
models/: best.txt  ppo_model_2.json
ops/: .env.template  docker-compose.yml
optimizer/: README.md  __init__.py  earnings_vol_optuna.py  g2max_optuna.py  objective.py  runner_lean.py  search_space.yaml  search_space_sr_barrier.yaml  study_optuna.py
scripts/: README.md  aws_collect.ps1  build_knowledge.py  create_classic_board.sh  create_sprint_board.py  ingest_context.py  ledger.py  open_pr.py  propose_patch.py  query_knowledge.py  quickstart.sh  ralph_loop.sh  register_g2max_task.ps1  render_backtest_chart.py  run_backtest_with_chart.ps1  run_backtests.py  run_cloud_optuna.sh  run_cycle.sh  run_daily_paper_g2max.ps1  run_earnings_vol_optimization.ps1  run_g2max_optimization.ps1  run_local_end_to_end.ps1  run_local_end_to_end.sh  run_local_optuna.sh  run_ralphy_opencode.ps1  run_robustness.py  run_stress.py  score_results.py  smoke_backtest.py  smoke_test.py  test_apex_stack_v5.py
sprint_output/: github_issues.json  sprint_board.json  sprint_board.md
tests/: test_basic_functionality.py  test_contracts.py  test_data_loader.py  test_edge.py  test_engine_smoke.py  test_event_record.py  test_events.py  test_execution.py  test_g2max_rule.py  test_g2max_x_lab.py  test_guardrails.py  test_hmm_integration.py  test_ingest_ofac.py  test_ingest_patentsview.py  test_news_normalize.py  test_quantconnect_client.py  test_quantum_qubo.py  test_rl_agent.py  test_sr_barrier.py
tools/: README.md  __init__.py  fetch_openinsider.py  g2max_interactive.py
(+162 files in other folders)
